syntax = "proto3";

package pb;

import "changeTarget.proto";

option go_package = "Backend/pb";

message CreateChangeTargetRequest {
    int32 UserID = 1;
    int32 ChangeUserID = 2;
    string Reason = 3;
}

message CreateChangeTargetResponse {
    ChangeTarget ct = 1;
}

message GetChangeTargetRequest {
    int32 UserID = 1;
}

message GetChangeTargetResponse {
    ChangeTarget ct = 1;
}

